--- a/Site/.firebaserc
+++ b/Site/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "qqweb-b75ae"
-  }
+    "default": "qqweb-b75ae",
+    "asd": "qqweb-b75ae"
+  },
+  "targets": {},
+  "etags": {}
 }
