Changed modes, added photon version, changed firebase hosting data

--- a/Site/.firebaserc
+++ b/Site/.firebaserc
@@ -1,8 +1,5 @@
 {
   "projects": {
-    "default": "qqweb-b75ae",
-    "asd": "qqweb-b75ae"
-  },
-  "targets": {},
-  "etags": {}
+    "default": "qqstaging"
+  }
 }
